<package>
  <name>rtklibros</name>
  <version>1.0.0</version>
  <description>
    rtklib
  </description>
  <maintainer email="bgouveia@gmail.com">Bruno Gouveia</maintainer>
  <url>http://ros.org/wiki/rtklib</url>
  <author>Simon Lynen</author>
  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rtk_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rtk_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  
 <export>
      <cpp cflags="-I${prefix}/src -I${prefix}/srv_gen/cpp/include"/>
  </export>

</package>


